--- a/src/components/User/AboutUs/AboutUs.css
+++ b/src/components/User/AboutUs/AboutUs.css
@@ -22,11 +22,18 @@ body {
 .section-title {
   text-align: center;
   font-size: 2.5rem;
-  color: #2e7d32; /* Xanh lá */
+  color: #2e7d32;
+  /* Xanh lá */
   text-transform: uppercase;
   margin-bottom: 2rem;
   letter-spacing: 2px;
   position: relative;
+  transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.section-title:hover {
+  color: #2e7d32;
+  transform: scale(1.05);
 }
 
 .section-title::after {
@@ -36,7 +43,8 @@ body {
   left: 50%;
   width: 80px;
   height: 4px;
-  background-color: #ff9800; /* Cam */
+  background-color: #ff9800;
+  /* Cam */
   transform: translateX(-50%);
   border-radius: 2px;
 }
@@ -55,13 +63,37 @@ body {
   min-width: 300px;
 }
 
-.aboutus-text h2 {
+.product-features {
+  font-size: 16px;
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+  font-size: 1.1rem;
+  line-height: 1.8;
+  margin-bottom: 1rem;
+  color: #555;
+  margin-left: 20px;
+}
+
+.product-features strong {
+  color: #ff9800;
+  font-weight: bold;
+}
+
+.aboutus-container h2 {
   font-size: 2rem;
   color: #2e7d32;
   margin-bottom: 1rem;
 }
 
 .aboutus-text p {
+  font-size: 1.1rem;
+  line-height: 1.8;
+  margin-bottom: 1rem;
+  color: #555;
+}
+
+.aboutus-text ul {
   font-size: 1.1rem;
   line-height: 1.8;
   margin-bottom: 1rem;
@@ -116,19 +148,28 @@ body {
   text-align: center;
   margin-top: 2rem;
   padding: 2rem 1rem;
-  background-color: #2e7d32; /* Xanh lá */
+  background-color: #70a572;
+  /* Xanh lá */
   color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  transform: scale(1);
+}
+
+.thank-you:hover {
+  transform: scale(1.05);
+  background-color: #5a8a5c;
 }
 
 .thank-you h2 {
-  font-size: 2rem;
+  font-size: 4rem;
   margin-bottom: 1rem;
+  color: #19461b;
 }
 
 .thank-you p {
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 
 /* Loading Spinner */
@@ -144,7 +185,8 @@ body {
   width: 50px;
   height: 50px;
   border: 6px solid #e0e0e0;
-  border-top: 6px solid #2e7d32; /* Xanh lá */
+  border-top: 6px solid #2e7d32;
+  /* Xanh lá */
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
