--- a/src/components/Admin/ManageUsers/ManageUsers.css
+++ b/src/components/Admin/ManageUsers/ManageUsers.css
@@ -69,6 +69,8 @@
   font-weight: bold;
   text-align: center;
   margin-bottom: 20px;
+  text-align: center;
+  font-weight: bolder;
 }
 
 .footer {
