--- a/src/components/User/News/NewsList/NewsListUser.css
+++ b/src/components/User/News/NewsList/NewsListUser.css
@@ -3,14 +3,15 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+  padding-top: 90px;
 }
 
 .news-list-title {
-  font-size: 24px;
-  font-weight: bold;
+  font-size: 40px;
   color: #333;
   margin-bottom: 20px;
-  text-align: left;
+  text-align: center;
+  font-weight: bolder;
 }
 
 .news-list {
