set fixed header

--- a/src/components/Admin/AdminHeader/AdminHeader.css
+++ b/src/components/Admin/AdminHeader/AdminHeader.css
@@ -5,6 +5,11 @@
   box-shadow: none !important;
   border-radius: 8px !important;
   border: #bbbbbb solid 1px !important;
+  z-index: 1200;
+}
+
+.admin-header + .content {
+  margin-top: 64px;
 }
 
 .admin-header-title {
