fix layout manage account

--- a/src/components/User/ManageAcount/EditProfile.css
+++ b/src/components/User/ManageAcount/EditProfile.css
@@ -9,6 +9,7 @@
   margin-top: 0.3rem;
   border-radius: 15px;
   margin-right: 0.3rem;
+  padding-top: 77px;
 }
 
 .container-edit-profile .user-info {
